--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,3 @@
 This project is an attempt to detect different faults present in the bearings using machine learning
+
+Use the IMS bearing data extraction.ipynb file for code
