--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,6 @@
 This project is an attempt to detect different faults present in the bearings using machine learning
 
 Use the IMS bearing data extraction.ipynb file for code
+
+The inspiration for the project is sourced from 
+https://github.com/mohan696matlab/IMS-Bearing-Fault-Diagnosis.git
